2008-07-13  Vincent Untz  <vuntz@gnome.org>

	Add PR about GUADEC+Akademy in 2009.

	* www.gnome.org/index.wml: (and remove GUADEC from upcoming event)
	* www.gnome.org/press/releases/2008-07-guadec-akademy-grancanaria.w
	ml:
	* www.gnome.org/press/releases/Makefile.am:
	* www.gnome.org/press/releases/index.wml:

2008-07-09  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: update GNOME.Asia paragraph with link

2008-07-07  Vincent Untz  <vuntz@gnome.org>

	Link to the PR, and change the name of the PR file.

	* www.gnome.org/index.wml:
	* www.gnome.org/press/releases/Makefile.am:
	* www.gnome.org/press/releases/index.wml:
	* www.gnome.org/press/releases/stormy_executivedir.wml:

2008-07-06  Dave Neary  <bolsh@gnome.org>

	* www.gnome.org/press/releases/stormy_executivedir.wml: Update press
	release (still unlinked).

2008-07-06  Dave Neary  <bolsh@gnome.org>

	* www.gnome.org/press/releases/stormy_executivedir.wml: Add new press
	release for GUADEC announcement (unlinked for the moment).

2008-07-03  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Add the sony-ericsson-remotes directory
	and subs

2008-06-30  Sebastian Pölsterl  <sebp@cvs.gnome.org>

	* www.gnome.org/projects/index.wml:
	Added link to Deskbar-Applet site

2008-06-29  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html: 
	  add cheese 2.22.3

2008-06-27  Sebastian Pölsterl  <sebp@cvs.gnome.org>

	* configure.in
	* www.gnome.org/projects/deskbar-applet/images
	* www.gnome.org/projects/deskbar-applet/images/deskbar-applet.png
	* www.gnome.org/projects/deskbar-applet/images/deskbar-applet-icon.png
	* www.gnome.org/projects/deskbar-applet/images/Makefile.am
	* www.gnome.org/projects/deskbar-applet/images/package-x-generic.png
	* www.gnome.org/projects/deskbar-applet/ChangeLog
	* www.gnome.org/projects/deskbar-applet/Makefile.am
	* www.gnome.org/projects/deskbar-applet/getinvolved.html