@@ -256,6 +256,18 @@
           <h3>Already baked development packages</h3>
 
             <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.23/cheese-2.23.5.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 2.23.5
+              </a>
+              <p>
+              released on July 21st 2008<br />
+              md5sums: 49ade729a10d7341416cf54ba8c3a767
+              </p>
+            </div>
+
+            <div class="download">
               <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.23/cheese-2.23.4.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
