@@ -136,6 +136,22 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>July 21st 2008</h3>
+          <p>
+          Unstable verson 2.23.5 was released!
+          New features since previous version include:
+          </p>
+          <ul>
+            <li>make recording of videos work again</li>
+            <li>write logs, when cheese crashes</li>
+            <li>allow to choose the webcam using the preference dialog</li>
+            <li>start cheese when you plug in your camera</li>
+            <li>use ogv as default video extension</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download.html">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-July/msg00041.html">full release notes</a>)
+
           <h3>June 29th 2008</h3>
           <p>
           Stable verson 2.22.3 was released!
@@ -161,32 +177,6 @@
           </ul>
           <a href="download.html">Download it</a>
           (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-June/msg00043.html">full release notes</a>)
-
-          <h3>June 2nd 2008</h3>
-          <p>
-          Unstable verson 2.23.3 was released!
-          New features since previous version include:
-          </p>
-          <ul>
-            <li>a new flash, which works awesome under composited desktops</li>
-            <li>add the possibility to change the path, where photos and videos are stored</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download.html">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-June/msg00013.html">full release notes</a>)
-
-          <h3>May 26th 2008</h3>
-          <p>
-          Stable verson 2.22.2 was released!
-          New features since previous stable version include:
-          </p>
-          <ul>
-            <li>cheese crashed, when a file was deleted twice</li>
-            <li>fixed regression of gio, which disabled DnD</li>
-            <li>fixed invalid free in cheese</li>
-          </ul>
-          <a href="download.html">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-May/msg00042.html">full release notes</a>)
 
         </div>
       </div><!-- bottom -->
