@@ -1,3 +1,9 @@
+2008-07-21  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html: 
+	  populate the 2.23.5 cheese release
+
 2008-07-13  Vincent Untz  <vuntz@gnome.org>
 
 	Add PR about GUADEC+Akademy in 2009.
